# bigdata-job-market

./: .gitignore  PROJECT_ARCHITECTURE.md  README.md  crawl.py  crawl_detail.py  crawl_links.py  data.json  data1.json  data2.json  debug.html  demo.py  demo2.py  jobs.json  json_format.md  main.py  pyproject.toml  raw_jobs.jsonl  test1.py  topcv_jobs.csv  topcv_jobs.json
apps/batch/jobs/: raw_to_bronze.py
apps/ingestion/: crawler.py  process.py  producer.py
apps/spark/: kafka_to_cassandra.py  kafka_to_es.py
apps/stream/: aggregations.py  sinks.py  stream_main.py  transform.py
bigdata-job-market/: README.md
configs/: .env.example  requirements.txt
data/bronze/: bronze_data_format.md
data/raw/: raw_data_format.md
data/silver/: silver_data_format.md
data_contracts/: data_contract_v1.md
docs/: hdfs_data_ingestion.md  raw_to_bronze_runbook.md  spark_on_minikube.md
infra/cassandra/: README.md
infra/compose/: docker-compose.yml
infra/kubernetes/: batch-etl-cronjob.yaml
infra/spark/: Dockerfile  README.md
infra/streaming/: README.md
scripts/: create_topics.py
shared/: schemas.py
