[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bigdata-job-market"
version = "0.1.0"
description = "Job market crawler"
requires-python = ">=3.13"
dependencies = [
  "requests",
  "beautifulsoup4",
  "cloudscraper>=1.2.71",
]

[tool.uv]
package = false
